# AI-Recruitment-Agent

./: .env.example  .gitignore  .txt  README.md  main.py  pyproject.toml  requirements.txt
app/: jobrole.py  main.py  rag.py
web-app/: package-lock.json  package.json
web-app/src/: App.tsx  index.css
web-app/src/components/ui/: combobox.tsx  field.tsx  select.tsx
