[project]
name = "ai-recruitment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
    "litellm>=1.81.3",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
